Post Database Style
Took some time away from database work to revisit some lingering style
issues such as the about page and fonts.

The Steelfish and Helvetica Neue Light fonts aren’t being read by my
browser, so the Google font Oswald and a light sans serif are filling
in for the time being. Too bad there are drastic sizing differences
between the two type sets, so a lot of my typography is at 80% right
now.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -236,26 +236,6 @@
           "parents": [],
           "type": "css"
         },
-        "3901cf97": {
-          "id": "3901cf97",
-          "path": "assets/css/2-basics/_body-element.sass",
-          "output": "assets/css/2-basics/_body-element.css",
-          "name": "_body-element.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "abc0766b"
-          ],
-          "type": "sass"
-        },
         "118e8fb8": {
           "id": "118e8fb8",
           "path": "assets/css/2-basics/_links.sass",
@@ -882,6 +862,64 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "7c0081cd": {
+          "id": "7c0081cd",
+          "path": "assets/css/4-pages/_about.sass",
+          "output": "assets/css/4-pages/_about.css",
+          "name": "_about.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "845cfb88": {
+          "id": "845cfb88",
+          "path": "assets/css/2-basics/_typography.sass",
+          "output": "assets/css/2-basics/_typography.css",
+          "name": "_typography.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "71cf595b": {
+          "id": "71cf595b",
+          "path": "assets/css/2-basics/_overall.sass",
+          "output": "assets/css/2-basics/_overall.css",
+          "name": "_overall.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
