--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,17 +9,6 @@
       "name": "davenfund",
       "path": "",
       "files": {
-        "46919818": {
-          "id": "46919818",
-          "path": "buffer.php",
-          "output": "buffer.php",
-          "name": "buffer.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "54213387": {
           "id": "54213387",
           "path": "assets/css/3-modules/_video.sass",
@@ -889,7 +878,7 @@
           "output": "assets/css/2-basics/_typography.css",
           "name": "_typography.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -897,8 +886,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
           "type": "sass"
         },
         "71cf595b": {
@@ -951,6 +942,61 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "9ec7bfcd": {
+          "id": "9ec7bfcd",
+          "path": "assets/includes/rowvars.php",
+          "output": "assets/includes/rowvars.php",
+          "name": "rowvars.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "99c347c9": {
+          "id": "99c347c9",
+          "path": "assets/css/3-modules/_promobox.sass",
+          "output": "assets/css/3-modules/_promobox.css",
+          "name": "_promobox.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "abc0766b"
+          ],
+          "type": "sass"
+        },
+        "475c380d": {
+          "id": "475c380d",
+          "path": "form.php",
+          "output": "form.php",
+          "name": "form.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "e0a54cd0": {
+          "id": "e0a54cd0",
+          "path": "assets/img/DavenFund Committee-Grayscale.jpg",
+          "output": "assets/img/DavenFund Committee-Grayscale.jpg",
+          "name": "DavenFund Committee-Grayscale.jpg",
+          "category": "IMAGE",
+          "size": 5962208,
+          "type": "jpg",
+          "initialSize": 5962208,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
