Register and Login Users
Now you can register and login and edit your own profile.

The last step before integrating with the CAS login.

I still have a few kinks to work out. Style and elements the committee
wants integrated (FAQ, background images, etc). Then there are some
issues with updating images and files (which are often too large and
slowing down the server).

I’ll fix that tomorrow after my final meeting before launch.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -29,6 +29,19 @@
           ],
           "type": "sass"
         },
+        "62744037": {
+          "id": "62744037",
+          "path": "uploaded_images/164412-Adorable-Husky-Puppies.jpg",
+          "output": "uploaded_images/164412-Adorable-Husky-Puppies.jpg",
+          "name": "164412-Adorable-Husky-Puppies.jpg",
+          "category": "IMAGE",
+          "size": 20312,
+          "type": "jpg",
+          "initialSize": 20312,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "2a91529d": {
           "id": "2a91529d",
           "path": "edit.php",
@@ -997,6 +1010,54 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "07efa366": {
+          "id": "07efa366",
+          "path": "logout.php",
+          "output": "logout.php",
+          "name": "logout.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "1ad2afad": {
+          "id": "1ad2afad",
+          "path": "uploaded_images/nona_101220_GR-LE_diver_pp_PantherProwl_2010_305_edited_hr.jpg",
+          "output": "uploaded_images/nona_101220_GR-LE_diver_pp_PantherProwl_2010_305_edited_hr.jpg",
+          "name": "nona_101220_GR-LE_diver_pp_PantherProwl_2010_305_edited_hr.jpg",
+          "category": "IMAGE",
+          "size": 92326,
+          "type": "jpg",
+          "initialSize": 92326,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5ea4c54f": {
+          "id": "5ea4c54f",
+          "path": "uploaded_images/greg_edit_4.jpg",
+          "output": "uploaded_images/greg_edit_4.jpg",
+          "name": "greg_edit_4.jpg",
+          "category": "IMAGE",
+          "size": 126129,
+          "type": "jpg",
+          "initialSize": 126129,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3f021879": {
+          "id": "3f021879",
+          "path": "assets/includes/get-user.php",
+          "output": "assets/includes/get-user.php",
+          "name": "get-user.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
