--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "davenfund",
       "path": "",
       "files": {
+        "46919818": {
+          "id": "46919818",
+          "path": "buffer.php",
+          "output": "buffer.php",
+          "name": "buffer.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
         "54213387": {
           "id": "54213387",
           "path": "assets/css/3-modules/_video.sass",
@@ -496,17 +507,6 @@
           ],
           "type": "sass"
         },
-        "367df2c7": {
-          "id": "367df2c7",
-          "path": "assets/includes/proposal.php",
-          "output": "assets/includes/proposal.php",
-          "name": "proposal.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "362cdff9": {
           "id": "362cdff9",
           "path": "assets/css/2-basics/_layouts.sass",
@@ -605,28 +605,6 @@
           "path": "assets/includes/db.php",
           "output": "assets/includes/db.php",
           "name": "db.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "9a8d73ba": {
-          "id": "9a8d73ba",
-          "path": "create.php",
-          "output": "create.php",
-          "name": "create.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "232f5c6c": {
-          "id": "232f5c6c",
-          "path": "assets/includes/cards.php",
-          "output": "assets/includes/cards.php",
-          "name": "cards.php",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
@@ -987,17 +965,6 @@
           ],
           "type": "sass"
         },
-        "475c380d": {
-          "id": "475c380d",
-          "path": "form.php",
-          "output": "form.php",
-          "name": "form.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "e0a54cd0": {
           "id": "e0a54cd0",
           "path": "assets/img/DavenFund Committee-Grayscale.jpg",
@@ -1053,6 +1020,52 @@
           "path": "assets/includes/get-user.php",
           "output": "assets/includes/get-user.php",
           "name": "get-user.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "ae01f90f": {
+          "id": "ae01f90f",
+          "path": "rules.php",
+          "output": "rules.php",
+          "name": "rules.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "eabedc4e": {
+          "id": "eabedc4e",
+          "path": "faq.php",
+          "output": "faq.php",
+          "name": "faq.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "6f632aee": {
+          "id": "6f632aee",
+          "path": "uploaded_images/IMG_4073.JPG",
+          "output": "uploaded_images/IMG_4073.JPG",
+          "name": "IMG_4073.JPG",
+          "category": "IMAGE",
+          "size": 22061,
+          "type": "jpg",
+          "initialSize": 22061,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6a6d9f6c": {
+          "id": "6a6d9f6c",
+          "path": "assets/includes/alt-header.php",
+          "output": "assets/includes/alt-header.php",
+          "name": "alt-header.php",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
