Resize and Retouch
Gave some images some love here and there. Resizing and getting rid of
old photos or videos we don’t use anymore. Additionally, the footer and
alternative header is all set up.

And did I mention I went through and did a bunch of ADA work for our
visitors with screen readers?

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -162,19 +162,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "1b2815b6": {
-          "id": "1b2815b6",
-          "path": "assets/img/leaflight.jpg",
-          "output": "assets/img/leaflight.jpg",
-          "name": "leaflight.jpg",
-          "category": "IMAGE",
-          "size": 77467,
-          "type": "jpg",
-          "initialSize": 77467,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "7e38ec17": {
           "id": "7e38ec17",
           "path": "assets/css/1-tools/_fonts.scss",
@@ -320,32 +307,6 @@
           ],
           "type": "sass"
         },
-        "b16ae4f7": {
-          "id": "b16ae4f7",
-          "path": "assets/img/red-horiz-logo.png",
-          "output": "assets/img/red-horiz-logo.png",
-          "name": "red-horiz-logo.png",
-          "category": "IMAGE",
-          "size": 68857,
-          "type": "png",
-          "initialSize": 68857,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "265daf23": {
-          "id": "265daf23",
-          "path": "assets/img/red-u-logo.png",
-          "output": "assets/img/red-u-logo.png",
-          "name": "red-u-logo.png",
-          "category": "IMAGE",
-          "size": 1761,
-          "type": "png",
-          "initialSize": 1761,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "cf67e7e0": {
           "id": "cf67e7e0",
           "path": "assets/css/4-pages/_gallery.sass",
@@ -366,45 +327,6 @@
           ],
           "type": "sass"
         },
-        "6b6b27d4": {
-          "id": "6b6b27d4",
-          "path": "assets/img/5554 Davenfund Logo - Circle.png",
-          "output": "assets/img/5554 Davenfund Logo - Circle.png",
-          "name": "5554 Davenfund Logo - Circle.png",
-          "category": "IMAGE",
-          "size": 3194021,
-          "type": "png",
-          "initialSize": 3194021,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "da46d582": {
-          "id": "da46d582",
-          "path": "assets/img/5554 Davenfund Logo - Transparent Background.png",
-          "output": "assets/img/5554 Davenfund Logo - Transparent Background.png",
-          "name": "5554 Davenfund Logo - Transparent Background.png",
-          "category": "IMAGE",
-          "size": 4344400,
-          "type": "png",
-          "initialSize": 4344400,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "a862a5c0": {
-          "id": "a862a5c0",
-          "path": "assets/img/5554 Davenfund Logo.jpg",
-          "output": "assets/img/5554 Davenfund Logo.jpg",
-          "name": "5554 Davenfund Logo.jpg",
-          "category": "IMAGE",
-          "size": 1589183,
-          "type": "jpg",
-          "initialSize": 1589183,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "e5fec134": {
           "id": "e5fec134",
           "path": "everybody.php",
@@ -415,19 +337,6 @@
           "imported": false,
           "parents": [],
           "type": "php"
-        },
-        "69b4285f": {
-          "id": "69b4285f",
-          "path": "assets/img/avatar.JPG",
-          "output": "assets/img/avatar.JPG",
-          "name": "avatar.JPG",
-          "category": "IMAGE",
-          "size": 116716,
-          "type": "jpg",
-          "initialSize": 116716,
-          "optimized": false,
-          "height": 0,
-          "width": 0
         },
         "2b5b766c": {
           "id": "2b5b766c",
@@ -527,28 +436,6 @@
           ],
           "type": "sass"
         },
-        "1a56134b": {
-          "id": "1a56134b",
-          "path": "assets/img/heart-outline.php",
-          "output": "assets/img/heart-outline.php",
-          "name": "heart-outline.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "f4fd048d": {
-          "id": "f4fd048d",
-          "path": "assets/img/heart.php",
-          "output": "assets/img/heart.php",
-          "name": "heart.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "f1a0ddc5": {
           "id": "f1a0ddc5",
           "path": "about.php",
@@ -633,58 +520,6 @@
           "size": 20909,
           "type": "png",
           "initialSize": 20909,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "85bff42f": {
-          "id": "85bff42f",
-          "path": "assets/img/Like Simple.png",
-          "output": "assets/img/Like Simple.png",
-          "name": "Like Simple.png",
-          "category": "IMAGE",
-          "size": 21008,
-          "type": "png",
-          "initialSize": 21008,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "0e2f80bf": {
-          "id": "0e2f80bf",
-          "path": "assets/img/DavenFund Text Only - White.png",
-          "output": "assets/img/DavenFund Text Only - White.png",
-          "name": "DavenFund Text Only - White.png",
-          "category": "IMAGE",
-          "size": 48356,
-          "type": "png",
-          "initialSize": 48356,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "0eff7dd8": {
-          "id": "0eff7dd8",
-          "path": "assets/img/White DU.png",
-          "output": "assets/img/White DU.png",
-          "name": "White DU.png",
-          "category": "IMAGE",
-          "size": 50645,
-          "type": "png",
-          "initialSize": 50645,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "5ab044e3": {
-          "id": "5ab044e3",
-          "path": "assets/img/Like Simple - OUTLINE.png",
-          "output": "assets/img/Like Simple - OUTLINE.png",
-          "name": "Like Simple - OUTLINE.png",
-          "category": "IMAGE",
-          "size": 24983,
-          "type": "png",
-          "initialSize": 24983,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -965,19 +800,6 @@
           ],
           "type": "sass"
         },
-        "e0a54cd0": {
-          "id": "e0a54cd0",
-          "path": "assets/img/DavenFund Committee-Grayscale.jpg",
-          "output": "assets/img/DavenFund Committee-Grayscale.jpg",
-          "name": "DavenFund Committee-Grayscale.jpg",
-          "category": "IMAGE",
-          "size": 5962208,
-          "type": "jpg",
-          "initialSize": 5962208,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "07efa366": {
           "id": "07efa366",
           "path": "logout.php",
@@ -1071,6 +893,93 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "c27719fc": {
+          "id": "c27719fc",
+          "path": "alt-faq.php",
+          "output": "alt-faq.php",
+          "name": "alt-faq.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "abd63450": {
+          "id": "abd63450",
+          "path": "assets/img/df-committee-grayscale.jpg",
+          "output": "assets/img/df-committee-grayscale.jpg",
+          "name": "df-committee-grayscale.jpg",
+          "category": "IMAGE",
+          "size": 115617,
+          "type": "jpg",
+          "initialSize": 115617,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "898d116d": {
+          "id": "898d116d",
+          "path": "assets/img/500-landscape.jpg",
+          "output": "assets/img/500-landscape.jpg",
+          "name": "500-landscape.jpg",
+          "category": "IMAGE",
+          "size": 55177,
+          "type": "jpg",
+          "initialSize": 55177,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "de531543": {
+          "id": "de531543",
+          "path": "assets/includes/corner-logo.php",
+          "output": "assets/includes/corner-logo.php",
+          "name": "corner-logo.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "da46d582": {
+          "id": "da46d582",
+          "path": "assets/img/5554 Davenfund Logo - Transparent Background.png",
+          "output": "assets/img/5554 Davenfund Logo - Transparent Background.png",
+          "name": "5554 Davenfund Logo - Transparent Background.png",
+          "category": "IMAGE",
+          "size": 83159,
+          "type": "png",
+          "initialSize": 83159,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0e2f80bf": {
+          "id": "0e2f80bf",
+          "path": "assets/img/DavenFund Text Only - White.png",
+          "output": "assets/img/DavenFund Text Only - White.png",
+          "name": "DavenFund Text Only - White.png",
+          "category": "IMAGE",
+          "size": 15009,
+          "type": "png",
+          "initialSize": 15009,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0eff7dd8": {
+          "id": "0eff7dd8",
+          "path": "assets/img/White DU.png",
+          "output": "assets/img/White DU.png",
+          "name": "White DU.png",
+          "category": "IMAGE",
+          "size": 30774,
+          "type": "png",
+          "initialSize": 30774,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
